[package]
name = "dsengine_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.postcard]
# includes heapless-cas by default, we can't use atomic compare-and-swap
version = "1"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive", "alloc"]
