[package]
name = "sandstone_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.hashbrown]
version = "0.13"
default-features = false
features = ["inline-more", "serde"]

[dependencies.rustc-hash]
version = "1.1"
default-features = false

[dependencies.postcard]
# includes heapless-cas by default, we can't use atomic compare-and-swap
version = "1"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive", "alloc"]
