[package]
name = "dsengine_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsengine_common = { path = "../common" }
ironds-romtool = { git = "https://github.com/QuinnPainter/ironds-romtool" }
imgui = { version = "0.10.0", features = ["docking"] }
imgui-winit-support = "0.10.0"
imgui-glow-renderer = "0.10.0"
glow = "0.10.0"
glutin = "0.29.1"
ron = "0.8.0"
tinyfiledialogs = "3.0"
home = "0.5"
serde = { version = "1", features = ["derive"] }
stable-vec = "0.4"
quote = "1"
include_dir = "0.7"
