[package]
name = "sandstone"
version = "0.1.0"
edition = "2021"

[dependencies]
ironds = { git = "https://github.com/QuinnPainter/ironds", features = ["arm9"] }
sandstone_common = { path = "../../common" }
fixed = "1.23"
cordic = "0.1.5"
randomize = { version = "4.0.0-alpha.3", default-features = false }

[profile.dev]
opt-level = 3
